--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="/src/index.css"
-      <link
-      rel="icon"
-      href="/plant.svg"
-    />
+    <link rel="stylesheet" href="/src/index.css" />
+    <link rel="icon" href="/plant.svg" />
     <title>Proper Plants</title>
   </head>
   <body>
